--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,98 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+:root {
+    --color1: #000000;
+    --color2: #434343;
+    --color3: #808080;
+}
 
+.main-container {
+    
+    background-color: var(--color2);
+
+}
 
 /* SECTION SIDEBAR  */
 
+.sidebar {
+    background-color: var(--color1);
+    color: var(--color2);
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    width: 230px;
+    height: 110vh;
 
+    padding: 15px 15px 0px 15px;
+}
+
+.sidebar figure img {
+    width: 90%;
+}
+
+.sidebar figure img:last-child {
+    display: none;
+}
+
+.sidebar ul li img{
+    width: 30px;
+}
+
+.sidebar li {
+    margin-top: 20px;
+    font-weight: 700;
+}
+.sidebar i {
+    background-color: var(--color2);
+}
+
+ul {
+    list-style-type: none;
+}
+
+h4 {
+    margin-top: 20px;
+    color: white;
+}
+
+.sidebar .download {
+    display: block;
+    margin-left: 5px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.sidebar .download img {
+    width: 20px;
+    color: var(--color2);
+}
+
+.sidebar .download span {
+    font-size: 13px;
+    font-weight: 700;
+}
+
+hr {
+    color: var(--color2);
+}
+
+.sidebar .profile {
+    margin-top: 10px;
+}
+
+.sidebar .profile img {
+    width: 30px;
+    background-color: var(--color3);
+    border-radius: 30px;
+}
+
+.sidebar .profile span {
+    color: white;
+    margin-left: 10px;
+    font-weight: 600;
+}
 
 /* // SECTION SIDEBAR // */
